Cambiando algunas descripciones

--- a/ETL_Extraccion_de_Datos.ipynb
+++ b/ETL_Extraccion_de_Datos.ipynb
@@ -52,7 +52,7 @@
       "source": [
         "import _____ as _____\n",
         "\n",
-        "# Suponiendo que descargaste el archivo 'gapminder.csv'\n",
+        "# URL al archivo CSV\n",
         "url = \"https://raw.githubusercontent.com/zief0002/miniature-garbanzo/main/data/gapminder.csv\"\n",
         "data = pd._____(url)\n",
         "\n",
