--- a/ETL_Transformation_Load.ipynb
+++ b/ETL_Transformation_Load.ipynb
@@ -1,39 +1,37 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# ETL: Transformation and Load"
-      ],
-      "metadata": {
-        "id": "djh6vTm2BnEN"
-      }
+        "<a href=\"https://colab.research.google.com/github/jmvazqueznicolas/AI_and_DS_Tec2023/blob/main/ETL_Transformation_Load.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "djh6vTm2BnEN"
+      },
       "source": [
-        "##Extract the dataset\n"
-      ],
+        "# ETL: Transformation and Load"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "A68b1G3k4ljO"
-      }
+      },
+      "source": [
+        "##Extract the dataset\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "U30tlATz4cdL"
+      },
+      "outputs": [],
       "source": [
         "# Import libraries\n",
         "import ____ as ___\n",
@@ -48,24 +46,24 @@
         "# Extract dataset\n",
         "adult_data = pd.read_csv(url, names=column_names, sep=\"\\s*,\\s*\", engine='python')\n",
         "adult_data.head(50)"
-      ],
-      "metadata": {
-        "id": "U30tlATz4cdL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data cleaning: Deletion"
-      ],
       "metadata": {
         "id": "-5LJWPBpf44k"
-      }
+      },
+      "source": [
+        "# Data cleaning: Deletion"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Q7NLFgbykctl"
+      },
+      "outputs": [],
       "source": [
         "# Check missing values (in this dataset, missing values are marked with '?').\n",
         "missing_values = adult_data == ____\n",
@@ -79,51 +77,51 @@
         "\n",
         "print(f\"Before cleaning: {adult_data.shape[0]} filas\")\n",
         "print(f\"After cleaning: {df_cleaned.shape[0]} filas\")"
-      ],
-      "metadata": {
-        "id": "Q7NLFgbykctl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_final = df_cleaned.______(drop=True)\n",
-        "df_final.tail(50)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "HW-uLzjUprj8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_final = df_cleaned.______(drop=True)\n",
+        "df_final.tail(50)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data cleaning: Imputation\n"
-      ],
       "metadata": {
         "id": "zBzW-4jcqLHm"
-      }
+      },
+      "source": [
+        "# Data cleaning: Imputation\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-_pv7QABrD0c"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.impute import SimpleImputer\n",
         "\n",
         "# Replace ? values for NaN\n",
         "df_final._____(\"?\", np.nan, inplace=True)\n",
         "df_final.head(30)"
-      ],
-      "metadata": {
-        "id": "-_pv7QABrD0c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0yATO6FBs-xg"
+      },
+      "outputs": [],
       "source": [
         "# Impute missing values for categorical variables.\n",
         "imputer_categorical = SimpleImputer(strategy='most_frequent')\n",
@@ -134,35 +132,35 @@
         "imputer_numerical = SimpleImputer(strategy='mean')\n",
         "for col in ['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week']:\n",
         "    df_final[col] = imputer_numerical._________(df_final[col].values.reshape(-1, 1))"
-      ],
-      "metadata": {
-        "id": "0yATO6FBs-xg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_final.head(30)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JlUURxtBrVmi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_final.head(30)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data Encoding"
-      ],
       "metadata": {
         "id": "LDNQTq0xwCZR"
-      }
+      },
+      "source": [
+        "# Data Encoding"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bb1z7wXIwBjo"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
@@ -174,38 +172,38 @@
         "\n",
         "# To verify the changes.\n",
         "print(df_final[['income', 'income_encoded']].head(100))"
-      ],
-      "metadata": {
-        "id": "bb1z7wXIwBjo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xnMNfWkmwViW"
+      },
+      "outputs": [],
       "source": [
         "# Rename the column\n",
         "df_income = df_final._____(columns=['income'])\n",
         "df_encoding = df_income.____(columns={'income_encoded': 'income'})\n",
         "df_encoding.head(30)"
-      ],
-      "metadata": {
-        "id": "xnMNfWkmwViW"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data normalization"
-      ],
       "metadata": {
         "id": "UOsg6voC8cb3"
-      }
+      },
+      "source": [
+        "# Data normalization"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "E7XQNvjp5wf9"
+      },
+      "outputs": [],
       "source": [
         "# Importing the necessary libraries.\n",
         "import _____ as _____\n",
@@ -218,15 +216,15 @@
         "\n",
         "# Showing dataset first columns.\n",
         "df.head()"
-      ],
-      "metadata": {
-        "id": "E7XQNvjp5wf9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nknPQ1bcTRnZ"
+      },
+      "outputs": [],
       "source": [
         "# Histogram of a feature to visualize the original distribution.\n",
         "plt.figure(figsize=(12, 6))\n",
@@ -244,36 +242,36 @@
         "plt.title('Distribución de Alcohol después de la Normalización')\n",
         "plt.tight_layout()\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "nknPQ1bcTRnZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Displaying the first rows of the normalized dataset\n",
-        "df_normalized.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "305D_c78TfrS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Displaying the first rows of the normalized dataset\n",
+        "df_normalized.head()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data discretization"
-      ],
       "metadata": {
         "id": "WW26i5wX9b3H"
-      }
+      },
+      "source": [
+        "# Data discretization"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FIkTmnyg9bOq"
+      },
+      "outputs": [],
       "source": [
         "# Loading the wine dataset\n",
         "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/wine/wine.data\"\n",
@@ -291,70 +289,70 @@
         "\n",
         "# Creating the new column with the discretized categories.\n",
         "wine_data['Alcohol_category'] = pd.cut(wine_data['Alcohol'], bins=bins, labels=labels, include_lowest=True)"
-      ],
-      "metadata": {
-        "id": "FIkTmnyg9bOq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "wine_data.head(50)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "95MM-m2v9l8F"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "wine_data.head(50)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Feature engineering"
-      ],
       "metadata": {
         "id": "AyxDFUo8-lOP"
-      }
+      },
+      "source": [
+        "# Feature engineering"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3indO0iJ-oJj"
+      },
+      "outputs": [],
       "source": [
         "# Color intensity-alcohol ratio\n",
         "wine_data['Color_to_alcohol_ratio'] = ______ / _____\n",
         "wine_data.head(30)\n"
-      ],
-      "metadata": {
-        "id": "3indO0iJ-oJj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ESElPdM0AWCv"
+      },
+      "outputs": [],
       "source": [
         "# Magnesio-alcohol ratio\n",
         "wine_data['Mg_to_Alcohol_ratio'] = _____ / _____\n",
         "wine_data.head(30)"
-      ],
-      "metadata": {
-        "id": "ESElPdM0AWCv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Load\n"
-      ],
       "metadata": {
         "id": "pWgowfeRAzHY"
-      }
+      },
+      "source": [
+        "# Load\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "td8vtczkA1Bp"
+      },
+      "outputs": [],
       "source": [
         "# Installation and importation of necessary libraries\n",
         "import ______\n",
@@ -368,12 +366,21 @@
         "# Query the database to verify that the data has been loaded correctly.\n",
         "consulta = pd._____('SELECT * FROM Wines', conn)\n",
         "consulta"
-      ],
-      "metadata": {
-        "id": "td8vtczkA1Bp"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
