Add colab button to regression .ipynb

--- a/Metrics_regression.ipynb
+++ b/Metrics_regression.ipynb
@@ -1,39 +1,37 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Regression Metrics"
-      ],
-      "metadata": {
-        "id": "djh6vTm2BnEN"
-      }
+        "<a href=\"https://colab.research.google.com/github/jmvazqueznicolas/AI_and_DS_Tec2023/blob/main/Metrics_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "djh6vTm2BnEN"
+      },
       "source": [
-        "## Mean Squared Error (MSE)\n"
-      ],
+        "# Regression Metrics"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "qm8RkIXllGKH"
-      }
+      },
+      "source": [
+        "## Mean Squared Error (MSE)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "U30tlATz4cdL"
+      },
+      "outputs": [],
       "source": [
         "# Import necessary libraries\n",
         "\n",
@@ -60,24 +58,24 @@
         "    y_pred = model.predict(X_test)\n",
         "    mse = mean_squared_error(y_test, y_pred)\n",
         "    print(f\"{name} - Mean Squared Error: {mse:.2f}\")"
-      ],
-      "metadata": {
-        "id": "U30tlATz4cdL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Mean Absolute Error (MAE)"
-      ],
       "metadata": {
         "id": "AvuGIZA1lJwM"
-      }
+      },
+      "source": [
+        "## Mean Absolute Error (MAE)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GRiRF-QaPec5"
+      },
+      "outputs": [],
       "source": [
         "# Import necessary libraries\n",
         "\n",
@@ -118,24 +116,24 @@
         "plt.title('Regression Model Fits')\n",
         "plt.legend()\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "GRiRF-QaPec5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Root Mean Squared Error (RMSE)\n"
-      ],
       "metadata": {
         "id": "wLeLy95jlSIs"
-      }
+      },
+      "source": [
+        "## Root Mean Squared Error (RMSE)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "46YmaY0gxiQl"
+      },
+      "outputs": [],
       "source": [
         "# Load the dataset\n",
         "\n",
@@ -166,24 +164,24 @@
         "plt.ylabel('RMSE')\n",
         "plt.title('Model RMSE Comparisons')\n",
         "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "46YmaY0gxiQl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Coefficient of Determination R²\n"
-      ],
       "metadata": {
         "id": "vRYLnmFslX2V"
-      }
+      },
+      "source": [
+        "## Coefficient of Determination R²\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TLH_uyEYyB3D"
+      },
+      "outputs": [],
       "source": [
         "# Load the dataset\n",
         "\n",
@@ -215,24 +213,24 @@
         "plt.title('Model R^2 Score Comparisons')\n",
         "plt.ylim(min(scores) - 0.1, 1)  # Setting the y-axis limits to be slightly below the minimum R^2 score and up to 1\n",
         "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "TLH_uyEYyB3D"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Mean Absolute Percentage Error (MAPE)\n"
-      ],
       "metadata": {
         "id": "tCVgD0dFldtE"
-      }
+      },
+      "source": [
+        "## Mean Absolute Percentage Error (MAPE)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Lku5hMs3kMxc"
+      },
+      "outputs": [],
       "source": [
         "# Load the diabetes dataset\n",
         "\n",
@@ -271,24 +269,24 @@
         "plt.title('Model MAPE Comparisons')\n",
         "plt.xticks(rotation=45)\n",
         "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "Lku5hMs3kMxc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Root Mean Squared Logarithmic Error (RMSLE)\n"
-      ],
       "metadata": {
         "id": "3vifJuDQlnN3"
-      }
+      },
+      "source": [
+        "## Root Mean Squared Logarithmic Error (RMSLE)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aQeKP32AkbRZ"
+      },
+      "outputs": [],
       "source": [
         "# Import necessary libraries\n",
         "\n",
@@ -331,12 +329,21 @@
         "plt.xticks(rotation=45)\n",
         "plt.show()\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "aQeKP32AkbRZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
