--- a/Activity 7 Descriptive Statistics/Activity_7_Descriptive_Statistics_code.ipynb
+++ b/Activity 7 Descriptive Statistics/Activity_7_Descriptive_Statistics_code.ipynb
@@ -72,7 +72,7 @@
         "id": "vmXL1u5hBcew"
       },
       "source": [
-        "### Compute and show statistics for 'age.'\n",
+        "### Compute and show statistics for 'age'\n",
         "Hint: Consider all statistical values shown in class.\n"
       ]
     },
@@ -93,7 +93,7 @@
         "id": "7iT4VBi5DpOK"
       },
       "source": [
-        "### Compute and show statistics for 'age.'\n",
+        "### Compute and show statistics for 'Disease Progression'\n",
         "Hint: Consider all statistical values shown in class."
       ]
     },
